Fixing selection starting when scrollbar in canvas clicked bug

--- a/style/base.css
+++ b/style/base.css
@@ -210,6 +210,13 @@ body {
 		box-sizing: border-box;
 		display: none;
 	}
+	.select-hit-area {
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+	}
 	/* Upload button */
 		.upload-input {
 			position: absolute;
